@@ -41,7 +41,6 @@ import com.google.common.collect.ImmutableList;
 import com.liferay.portal.language.LanguageUtil;
 import com.liferay.portal.model.User;
 import com.liferay.util.StringPool;
-import io.vavr.Tuple;
 import io.vavr.Tuple2;
 import io.vavr.Tuple3;
 import io.vavr.control.Try;
@@ -182,12 +181,13 @@ public class BrowserAPIImpl implements BrowserAPI {
 
         for (final Contentlet contentlet : contentlets) {
             Map<String, Object> contentMap;
-            if (contentlet.getBaseType().get() == BaseContentType.FILEASSET) {
+            final Optional<BaseContentType> baseType = contentlet.getBaseType();
+            if (baseType.isPresent() && baseType.get() == BaseContentType.FILEASSET) {
                 final FileAsset fileAsset = APILocator.getFileAssetAPI().fromContentlet(contentlet);
                 contentMap = fileAssetMap(fileAsset);
-            } else if (contentlet.getBaseType().get() == BaseContentType.DOTASSET) {
+            } else if (baseType.isPresent() && baseType.get() == BaseContentType.DOTASSET) {
                 contentMap = dotAssetMap(contentlet);
-            } else if (contentlet.getBaseType().get() == BaseContentType.HTMLPAGE) {
+            } else if (baseType.isPresent() &&  baseType.get() == BaseContentType.HTMLPAGE) {
                 final HTMLPageAsset page = APILocator.getHTMLPageAssetAPI().fromContentlet(contentlet);
                 contentMap = htmlPageMap(page);
             } else {
@@ -300,8 +300,8 @@ public class BrowserAPIImpl implements BrowserAPI {
 
         final List<Object> parameters = new ArrayList<>();
 
-        if (browserQuery.languageId > 0) {
-            appendLanguageQuery(sqlQuery, browserQuery.languageId,
+        if (!browserQuery.getLanguageIds().isEmpty()) {
+            appendLanguageQuery(sqlQuery, browserQuery.getLanguageIds(),
                     browserQuery.showDefaultLangItems);
         }
         if (browserQuery.site != null) {
@@ -322,7 +322,7 @@ public class BrowserAPIImpl implements BrowserAPI {
         if (!browserQuery.showArchived) {
             appendExcludeArchivedQuery(sqlQuery);
         }
-
+        Logger.debug(this, "Final SQL Query: " + sqlQuery);
         return new Tuple2<>(sqlQuery.toString(), parameters);
     }
 
@@ -351,6 +351,13 @@ public class BrowserAPIImpl implements BrowserAPI {
                     append(String.join(" , ", baseTypes)).append(") ");
         }
 
+        if(!browserQuery.contentTypeIds.isEmpty()){
+          baseQuery.append(" and struc.inode in (").
+                  append(browserQuery.contentTypeIds.stream()
+                          .map(id -> "'" + id + "'")
+                          .collect(Collectors.joining(" , "))).append(") ");
+        }
+
         return baseQuery.toString();
     }
 
@@ -358,16 +365,27 @@ public class BrowserAPIImpl implements BrowserAPI {
      * Appends the language query to the given SQL query to filter content by language.
      *
      * @param sqlQuery             The StringBuilder object representing the SQL query.
-     * @param languageId           The ID of the language to filter by.
+     * @param languageIds          The Set of language IDs to filter by.
      * @param showDefaultLangItems Whether to include default language items in the filter.
      */
-    private void appendLanguageQuery(StringBuilder sqlQuery, long languageId,
+    private void appendLanguageQuery(StringBuilder sqlQuery, Set<Long> languageIds,
             boolean showDefaultLangItems) {
 
-        sqlQuery.append(" and cvi.lang in (").append(languageId);
+        final Set<Long> filteredLanguageIds = languageIds.stream()
+                .filter(langId -> langId != null && langId > 0)
+                .collect(Collectors.toSet());
+
+        if (filteredLanguageIds.isEmpty()) {
+            return;
+        }
+
+        sqlQuery.append(" and cvi.lang in (");
+        sqlQuery.append(filteredLanguageIds.stream()
+                .map(String::valueOf)
+                .collect(Collectors.joining(",")));
 
         final long defaultLang = APILocator.getLanguageAPI().getDefaultLanguage().getId();
-        if (showDefaultLangItems && languageId != defaultLang) {
+        if (showDefaultLangItems && !filteredLanguageIds.contains(defaultLang)) {
             sqlQuery.append(",").append(defaultLang);
         }
         sqlQuery.append(")");
@@ -596,11 +614,10 @@ public class BrowserAPIImpl implements BrowserAPI {
 
             final DotMapViewTransformer transformer = new DotFolderTransformerBuilder().withFolders(folders)
                     .withUserAndRoles(browserQuery.user, roles).build();
-            final List<Map<String, Object>> mapViews = transformer.toMaps();
-            return mapViews;
+            return transformer.toMaps();
 
         }
-        return ImmutableList.of();
+        return List.of();
     } // getFolders.
 
     private Map<String,Object> htmlPageMap(final HTMLPageAsset page) throws DotStateException {
